--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,9 @@
-//\
-h1{
-    color: red;
-}
+@import "partials/_global.scss";
+@import "partials/_variables.scss";
+@import "partials/_header.scss";
+@import "partials/_main_jumbo.scss";
+@import "partials/_footer.scss";
+@import "partials/_cards.scss";
+
+
+
